Ganti gambar dengan video di section 2

--- a/index.html
+++ b/index.html
@@ -57,7 +57,10 @@
 
       <div class="row workingspace">
         <div class="col-lg-6">
-          <img src="assets/images/anemon.jpg" alt="Anemon" class="img-fluid">
+          <!-- <img src="assets/images/anemon.jpg" alt="Anemon" class="img-fluid"> -->
+          <video width="540" controls autoplay>
+            <source src="assets/images/anemonvid.mp4" type="video/mp4">
+          </video>
         </div>
         <div class="col-lg-5">
           <h3>Anemon</h3>
