penambahan layout gallery

--- a/gallery.html
+++ b/gallery.html
@@ -36,111 +36,93 @@
     </nav>
     <!-- End Navbar -->
 
+
     <!-- jumbotron -->
     <div class="jumbotron jumbotron-fluid">
-      <div class="container">
-        <h1 class="display-4">We are Anemon!</h1>
-        <p>Anemon adalah sebuah inovasi untuk memberikan kemudahan dalam memonitor sisa token listrik mini OLT Telkom.</p>
-        <a href="" class="btn btn-primary tombol">Our Work</a>
+        <div class="container">
+          <h1 class="display-4">Gallery</h1>
+          <p>Our work documentation</p>
+        </div>
       </div>
-    </div>
-    <!-- end jumbotron -->
-
+      <!-- end jumbotron -->
 
     <!-- Container -->
 
     <div class="container">
 
-      
+        <!-- Gallery  -->
 
-      <!-- Workingspace -->
-
-      <div class="row workingspace">
-        <div class="col-lg-6">
-          <!-- <img src="assets/images/anemon.jpg" alt="Anemon" class="img-fluid"> -->
-          <video width="540" controls autoplay>
-            <source src="assets/images/anemonvid.mp4" type="video/mp4">
-          </video>
-        </div>
-        <div class="col-lg-5">
-          <h3>Anemon</h3>
-          <p>Monitoring, notifikasi status GPON, dan isi token listrik dalam satu kemudahan.</p>
-          <a href="gallery.html" class="btn btn-primary tombol">Gallery</a>
-        </div>
-      </div>
-
-      <!-- end Workingspace -->
-
-      <!-- Team -->
-
-      <section class="teams">
-        <div class="row">
-          <div class="col">
-            <h1>The Team</h1>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col">
-            <figure class="figure">
-              <img src="assets/team/cfo.jpg" class="figure-img img-fluid" alt="CFO">
-              <figcaption class="figure-caption">
-                <h5>CFO</h5>
-                <p>Rezky</p>
-              </figcaption>
-            </figure>
-          </div>
-          <div class="col">
-            <figure class="figure">
-              <img src="assets/team/ceo.jpg" class="figure-img img-fluid" alt="CEO">
-              <figcaption class="figure-caption">
-                <h5>CEO</h5>
-                <p>Jayner</p>
-              </figcaption>
-            </figure>
-          </div>
-          <div class="col">
-            <figure class="figure">
-              <img src="assets/team/cto.jpg" class="figure-img img-fluid" alt="CTO">
-              <figcaption class="figure-caption">
-                <h5>CTO</h5>
-                <p>Edo</p>
-              </figcaption>
-            </figure>
-          </div>
-        </div>
-      </section>
-
-      <!-- End team -->
-
-        <!-- Testimonial -->
-
-        <section class="testimonial">
-          <div class="row justify-content-center quote">
-            <div class="col-lg-8">
-              <h5>" Anemon sangat membantu sekali untuk memonitor perangkat yang lokasinya jauh. Tidak perlu lagi menunggu waktu lama untuk mengisi token dan memonitor secara harian. "</h5>
+        <section class="site">
+            <div class="row justify-content-center">
+                <div class="col-lg-8">
+                    <h1 class="text-center">Sumba</h1>
+                </div>
             </div>
-          </div>
-  
-          <div class="row justify-content-center">
-            <div class="col-lg-6 justify-content-center d-flex">
-              <!-- <figure class="figure">
-                <img src="assets/images/img2.jpg" class="figure-img img-fluid rounded-circle" alt="Testi 1">
-              </figure> -->
-              <figure class="figure">
-                <img src="assets/images/img1.jpg" class="figure-img img-fluid rounded-circle utama" alt="Testi 2">
-                <figcaption class="figure-caption">
-                  <h5>Fachri Ramadhan</h5>
-                  <p>KaUBIS Atambua-Kefamenanu</p>
-                </figcaption>
-              </figure>
-              <!-- <figure class="figure">
-                <img src="assets/images/img2.jpg" class="figure-img img-fluid rounded-circle" alt="Testi 3">
-              </figure> -->
+            <div class="row">
+                <div class="col">
+                    <img src="assets/sumba/sumba1.jpg" alt="..." class="img-thumbnail img-fluid">
+                </div>
+                <div class="col">
+                    <img src="assets/sumba/sumba2.jpg" alt="..." class="img-thumbnail img-fluid">
+                </div>
+                <div class="col">
+                    <img src="assets/sumba/sumba3.jpg" alt="..." class="img-thumbnail img-fluid">
+                </div>
+                <div class="col">
+                    <img src="assets/sumba/sumba4.jpg" alt="..." class="img-thumbnail img-fluid">
+                </div>
             </div>
-          </div>
         </section>
-  
-        <!-- End testimonial -->
+
+        <section class="site">
+            <div class="row justify-content-center">
+                <div class="col-lg-8">
+                    <h1 class="text-center">Atapupu</h1>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <img src="assets/sumba/sumba1.jpg" alt="..." class="img-thumbnail img-fluid">
+                </div>
+                <div class="col">
+                    <img src="assets/sumba/sumba2.jpg" alt="..." class="img-thumbnail img-fluid">
+                </div>
+                <div class="col">
+                    <img src="assets/sumba/sumba3.jpg" alt="..." class="img-thumbnail img-fluid">
+                </div>
+                <div class="col">
+                    <img src="assets/sumba/sumba4.jpg" alt="..." class="img-thumbnail img-fluid">
+                </div>
+            </div>
+        </section>
+
+        <section class="site">
+            <div class="row justify-content-center">
+                <div class="col-lg-8">
+                    <h1 class="text-center">Insana</h1>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <img src="assets/sumba/sumba1.jpg" alt="..." class="img-thumbnail img-fluid">
+                </div>
+                <div class="col">
+                    <img src="assets/sumba/sumba2.jpg" alt="..." class="img-thumbnail img-fluid">
+                </div>
+                <div class="col">
+                    <img src="assets/sumba/sumba3.jpg" alt="..." class="img-thumbnail img-fluid">
+                </div>
+                <div class="col">
+                    <img src="assets/sumba/sumba4.jpg" alt="..." class="img-thumbnail img-fluid">
+                </div>
+            </div>
+        </section>
+
+        
+
+        <!-- End gallery -->
+
+
 
       <!-- info panel contact us-->
 
