edit responsive video

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <div class="row workingspace">
         <div class="col-lg-6">
           <!-- <img src="assets/images/anemon.jpg" alt="Anemon" class="img-fluid"> -->
-          <video width="540" controls autoplay>
+          <video controls autoplay>
             <source src="assets/images/anemonvid.mp4" type="video/mp4">
           </video>
         </div>
