Add feature page

--- a/feature.html
+++ b/feature.html
@@ -36,111 +36,31 @@
     </nav>
     <!-- End Navbar -->
 
+
     <!-- jumbotron -->
     <div class="jumbotron jumbotron-fluid">
-      <div class="container">
-        <h1 class="display-4">We are Anemon!</h1>
-        <p>Anemon adalah sebuah inovasi untuk memberikan kemudahan dalam memonitor sisa token listrik mini OLT Telkom.</p>
-        <a href="/feature.html" class="btn btn-primary tombol">Our Work</a>
-      </div>
+        <div class="container">
+          <h1 class="display-4">Features</h1>
+          <p>Tujuan utama Anemon adalah otomatisasi dalam monitoring perangkat. Berikut adalah fitur-fiturnya.</p>
+        </div>
     </div>
     <!-- end jumbotron -->
-
 
     <!-- Container -->
 
     <div class="container">
 
-      
+    <!-- 
+        ini nanti ditambahin section untuk :
+        klo Feature keknya masukin Foto" aja, 
+        isi token (foto / video isi token), 
+        melihat jumlah KWh (foto bagian depan anemon yang gambar ijo" itu), 
+        melihat histori penggunaan (foto di menu histori), 
+        notifkasi saat mati (foto bot telegram), 
+        notifikasi saat listrik mau habis (foto telegram)
+     -->
 
-      <!-- Workingspace -->
 
-      <div class="row workingspace">
-        <div class="col-lg-6">
-          <!-- <img src="assets/images/anemon.jpg" alt="Anemon" class="img-fluid"> -->
-          <video controls autoplay>
-            <source src="assets/images/anemonvid.mp4" type="video/mp4">
-          </video>
-        </div>
-        <div class="col-lg-5">
-          <h3>Anemon</h3>
-          <p>Monitoring, notifikasi status GPON, dan isi token listrik dalam satu kemudahan.</p>
-          <a href="gallery.html" class="btn btn-primary tombol">Gallery</a>
-        </div>
-      </div>
-
-      <!-- end Workingspace -->
-
-      <!-- Team -->
-
-      <section class="teams">
-        <div class="row">
-          <div class="col">
-            <h1>The Team</h1>
-          </div>
-        </div>
-        <div class="row justify-content-center">
-          <div class="col-3 d-flex justify-content-center">
-            <figure class="figure">
-              <img src="assets/team/cfo.jpg" class="figure-img img-fluid" alt="CFO">
-              <figcaption class="figure-caption">
-                <h5>CFO</h5>
-                <p>Rezky</p>
-              </figcaption>
-            </figure>
-          </div>
-          <div class="col-3 d-flex justify-content-center">
-            <figure class="figure">
-              <img src="assets/team/ceo.jpg" class="figure-img img-fluid" alt="CEO">
-              <figcaption class="figure-caption">
-                <h5>CEO</h5>
-                <p>Jayner</p>
-              </figcaption>
-            </figure>
-          </div>
-          <div class="col-3 d-flex justify-content-center">
-            <figure class="figure">
-              <img src="assets/team/cto.jpg" class="figure-img img-fluid" alt="CTO">
-              <figcaption class="figure-caption">
-                <h5>CTO</h5>
-                <p>Edo</p>
-              </figcaption>
-            </figure>
-          </div>
-        </div>
-      </section>
-
-      <!-- End team -->
-
-        <!-- Testimonial -->
-
-        <section class="testimonial">
-          <div class="row justify-content-center quote">
-            <div class="col-lg-8">
-              <h5>" Anemon sangat membantu sekali untuk memonitor perangkat yang lokasinya jauh. Tidak perlu lagi menunggu waktu lama untuk mengisi token dan memonitor secara harian. "</h5>
-            </div>
-          </div>
-  
-          <div class="row justify-content-center">
-            <div class="col-lg-6 justify-content-center d-flex">
-              <!-- <figure class="figure">
-                <img src="assets/images/img2.jpg" class="figure-img img-fluid rounded-circle" alt="Testi 1">
-              </figure> -->
-              <figure class="figure">
-                <img src="assets/images/img1.jpg" class="figure-img img-fluid rounded-circle utama" alt="Testi 2">
-                <figcaption class="figure-caption">
-                  <h5>Fachri Ramadhan</h5>
-                  <p>KaUBIS Atambua-Kefamenanu</p>
-                </figcaption>
-              </figure>
-              <!-- <figure class="figure">
-                <img src="assets/images/img2.jpg" class="figure-img img-fluid rounded-circle" alt="Testi 3">
-              </figure> -->
-            </div>
-          </div>
-        </section>
-  
-        <!-- End testimonial -->
 
       <!-- info panel contact us-->
 
