--- a/gallery.html
+++ b/gallery.html
@@ -26,9 +26,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ml-auto">
-            <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-            <a class="nav-link" href="#">Features</a>
-            <a class="nav-link" href="#">Pricing</a>
+            <a class="nav-link active" href="/index.html">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/feature.html">Features</a>
+            <a class="nav-link" href="/gallery.html">Gallery</a>
             <a class="btn btn-primary tombol" href="https://anemon.id">Sign Up</a>
           </div>
         </div>
@@ -41,7 +41,7 @@
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
           <h1 class="display-4">Gallery</h1>
-          <p>Our work documentation</p>
+          <p>Saat ini, Anemon sudah terpasang di 10 lokasi mini OLT yang ada di Witel NTT. Lokasi perangkat tersebar di 3 pulau utama di provinsi Nusa Tenggara Timur, yaitu pulau Timor, pulau Sumba, dan pulau Flores.</p>
         </div>
       </div>
       <!-- end jumbotron -->
@@ -132,12 +132,12 @@
             <div class="col-lg">
               <img src="assets/images/address.png" alt="Panel 1" class="float-left">
               <h4>Address</h4>
-              <p>Jalan Palapa no. 15 Kupang <br> Nusa Tenggara Timur</p>
+              <p>Jalan Palapa no. 10 Oebobo, Kota Kupang <br> Nusa Tenggara Timur</p>
             </div>
             <div class="col-lg">
               <img src="assets/images/email.png" alt="Panel 2" class="float-left">
               <h4>Email</h4>
-              <p>hallo@anemon.id</p>
+              <p>anemonid.telkom@gmail.com</p>
             </div>
             <div class="col-lg">
               <img src="assets/images/call.png" alt="Panel 3" class="float-left">
